# data_masking

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  masking_config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: masking_config_full.yaml  raw_synthetic.json  sample.json  sample_lines.jsonl  sample_text.txt
examples/configs/: synthetic.yaml
src/: __init__.py  cli.py  config_loader.py  masking_engine.py  streamlit_app.py  synthetic.yaml
src/config/: __init__.py  loader.py  models.py
src/core/: __init__.py  engine.py
src/service/: __init__.py  app.py  kyc_server.py  mcp_server.py
src/utils/: __init__.py  io.py
tests/: config_synthetic.yaml  config_test.yaml  test_config_loader.py  test_env_validation.py  test_file_encryption_api.py  test_kyc_server.py  test_masking_basic.py  test_mcp_server.py  test_synthetic_masking.py
