[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-masking"
version = "0.1.0"
description = "PII Masking & Encryption framework."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

[project.urls]
Changelog = "CHANGELOG.md"
